--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,12 @@
   border-radius: 5px;
   font-weight: 600;
 }
+.list-active {
+  background: #c5ddff;
+  padding: 7px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+}
 
 @layer base {
   * {
